--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/teal_700"
     android:paddingHorizontal="32dp"
     tools:context=".MainActivity">
 
@@ -11,8 +12,8 @@
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Currency Converter"
-        android:textColor="@color/black"
+        android:text="@string/currency_converter"
+        android:textColor="@color/white"
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/guideline"
@@ -23,16 +24,18 @@
         android:id="@+id/tvFrom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="From"
-        app:layout_constraintStart_toStartOf="@+id/spFromCurrency"
+        android:textColor="@color/white"
+        android:text="@string/from"
+        app:layout_constraintStart_toStartOf="@+id/tv_from_currency"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
 
     <TextView
         android:id="@+id/tvTo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="To"
-        app:layout_constraintStart_toStartOf="@+id/spToCurrency"
+        android:text="@string/to"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="@+id/tv_to_currency"
         app:layout_constraintTop_toTopOf="@+id/guideline" />
 
     <com.google.android.material.textfield.TextInputLayout
@@ -40,12 +43,12 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="Amount"
+        android:hint="@string/amount"
         android:layout_marginEnd="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/spFromCurrency"
-        app:layout_constraintEnd_toStartOf="@+id/spFromCurrency"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_from_currency"
+        app:layout_constraintEnd_toStartOf="@+id/tv_from_currency"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/spFromCurrency">
+        app:layout_constraintTop_toTopOf="@+id/tv_from_currency">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etFrom"
@@ -63,17 +66,17 @@
         app:layout_constraintGuide_percent="0.27" />
 
     <Spinner
-        android:id="@+id/spFromCurrency"
+        android:id="@+id/tv_from_currency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:entries="@array/currency_codes"
         android:padding="15dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintEnd_toStartOf="@+id/spToCurrency"
+        app:layout_constraintEnd_toStartOf="@+id/tv_to_currency"
         app:layout_constraintTop_toBottomOf="@+id/tvFrom" />
 
     <Spinner
-        android:id="@+id/spToCurrency"
+        android:id="@+id/tv_to_currency"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:entries="@array/currency_codes"
@@ -85,17 +88,18 @@
         android:id="@+id/btnConvert"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Convert"
+        android:text="@string/convert"
         android:layout_marginTop="16dp"
+        android:backgroundTint="@color/purple_200"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spToCurrency" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_to_currency" />
 
     <TextView
         android:id="@+id/tvResult"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="@+id/btnConvert"
         app:layout_constraintEnd_toStartOf="@+id/btnConvert"
         app:layout_constraintStart_toStartOf="parent"
